objects/Product_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Inventories</relationshipLabel>
        <relationshipName>Product_Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Available__c</fullName>
        <label>Qty Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Low Stock</fullName>
                </value>
                <value>
                    <fullName>No Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Inventory</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>